--- a/FullinkPro/index.html
+++ b/FullinkPro/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
   
 </head>
@@ -26,12 +26,49 @@
     </ul>
   </header>
 
-
-  <h1>Hello world</h1>
-    <div class="row m-2">
-      <div class="col-lg-6 bg-danger">hello</div>
-      <div class="col-lg-6 bg-warning">world</div>
+  <main>
+    <div class="container px-4 py-5" id="feacture-3">
+      <h2 class="pb-2 border-bottom">Descarga Ahora</h2>
+      <div class="row g-4 py-5 row-cols-1 row-cols-lg-3 ">
+        <div class="feature col">
+          <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
+            <img class="icon" src="iconMine.webp" alt="">
+          </div>
+          <h3 class="fs-2 custom-color-mine">Minecraft</h3>
+          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+          <a href="links.html" class="icon-link">
+            Descarga AQUI
+            <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+          </a>
+        </div>
+        <div class="feature col">
+            <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
+              <img class="icon" src="iconFnaf.jpg" alt="">
+            </div>
+            <h3 class="fs-2 custom-color-fnaf">Fnaf</h3>
+            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+            <a href="links.html" class="icon-link">
+              Descarga AQUI
+              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+            </a>
+          </div>
+          <div class="feature col">
+            <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
+              <img class="icon" src="iconPok.png" alt="">
+            </div>
+            <h3 class="fs-2 custom-color-poke">Pokemon</h3>
+            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+            <a href="links.html" class="icon-link">
+              Descarga AQUI
+              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+            </a>
+          </div>
+      </div>
     </div>
-  </div>
-  </body>
+
+  </main>
+
+  <footer>
+    
+  </footer>
 </html>
